@@ -182,4 +182,12 @@
 #define ap_func_attr_sentinel
 #endif
 
+#if ( defined(__GNUC__) &&                                        \
+      (__GNUC__ >= 4 || ( __GNUC__ == 3 && __GNUC_MINOR__ >= 4))) \
+    || __has_attribute(warn_unused_result)
+#define ap_func_attr_warn_unused_result   __attribute__((warn_unused_result))
+#else
+#define ap_func_attr_warn_unused_result
+#endif
+
 #endif /* AP_CONFIG_H */
